Added listener for width changes to match up the sliders in mainSplitPane